lowered letter spacing, correct bugs in app.py

--- a/static/game.css
+++ b/static/game.css
@@ -199,49 +199,49 @@ h2 {
 }
 
 .zero {
-    padding: 15px;
+    padding: 2px;
 }
 
 .one {
-    padding: 15px;
+    padding: 2px;
 }
 
 .two {
-    padding: 15px;
+    padding: 2px;
 }
 
 .three {
-    padding: 15px;
+    padding: 2px;
 }
 
 .four {
-    padding: 15px;
+    padding: 2px;
 }
 
 .five {
-    padding: 15px;
+    padding: 2px;
 }
 
 .six {
-    padding: 15px;
+    padding: 2px;
 }
 
 .seven {
-    padding: 15px;
+    padding: 2px;
 }
 
 .eight {
-    padding: 15px;
+    padding: 2px;
 }
 
 .nine {
-    padding: 15px;
+    padding: 2px;
 }
 
 .ten {
-    padding: 15px;
+    padding: 2px;
 }
 
 .eleven {
-    padding: 15px;
+    padding: 2px;
 }
